--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
 
         <form class="contact__name" action="">
-            <input type="text" name="name" placeholder="First Name">
+            <input class="contact__name2" type="text" name="name" placeholder="First Name">
             <input class="contact__lastname" type="text" name="name" placeholder="Last Name">
         </form>
 
